fix: update modal buttons alignments in element dialogs

--- a/src/elements/common/header/Header.scss
+++ b/src/elements/common/header/Header.scss
@@ -1,6 +1,6 @@
 @import '../variables';
 
-.be .be-header {
+.be-header {
     display: flex;
     flex: 0 0 70px;
     align-items: center;
@@ -15,11 +15,5 @@
     .be-search {
         flex: 1;
         padding-left: 20px;
-    }
-
-    input[type='search'] {
-        width: 100%;
-        font: inherit;
-        -webkit-appearance: none;
     }
 }
